--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -98,7 +98,7 @@
   --#{$card}--m-plain--BackgroundColor: transparent;
 
   // Toggle right
-  --#{$card}__header--m-toggle-right--toggle--MarginInlineEnd: calc((var(--pf-t--global--spacer--action--horizontal--default) - var(--pf-t--global--spacer--sm)) * -1);
+  --#{$card}__header--m-toggle-right--toggle--MarginInlineEnd: calc(var(--pf-t--global--spacer--action--horizontal--plain) * -1);
   --#{$card}__header--m-toggle-right--toggle--MarginInlineStart: calc(var(--pf-t--global--spacer--action--horizontal--plain) / 2);
 }
 
