--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -122,4 +122,12 @@
 
   // List bullet/marker
   --pf-t--global--list-style: disc outside;
+
+  --pf-t--global--spacer--action--vertical--spacious: var(--pf-t--global--spacer--md);
+  --pf-t--global--spacer--action--horizontal--spacious: var(--pf-t--global--spacer--xl);
+  --pf-t--global--spacer--action--vertical--compact: var(--pf-t--global--spacer--xs);
+  --pf-t--global--spacer--action--horizontal--compact: var(--pf-t--global--spacer--md);
+  --pf-t--global--spacer--action--horizontal--plain--compact: var(--pf-t--global--spacer--xs);
+  --pf-t--global--spacer--control--vertical--compact: var(--pf-t--global--spacer--xs);
+  --pf-t--global--spacer--control--horizontal--compact: var(--pf-t--global--spacer--md);
 }
