--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -123,6 +123,7 @@
   // List bullet/marker
   --pf-t--global--list-style: disc outside;
 
+  // Compact/Spacious spacers - TO BE DELETED ONCE FIGMA IS UPDATED
   --pf-t--global--spacer--action--vertical--spacious: var(--pf-t--global--spacer--md);
   --pf-t--global--spacer--action--horizontal--spacious: var(--pf-t--global--spacer--xl);
   --pf-t--global--spacer--action--vertical--compact: var(--pf-t--global--spacer--xs);
