--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -131,4 +131,5 @@
   --pf-t--global--spacer--action--horizontal--plain--compact: var(--pf-t--global--spacer--xs);
   --pf-t--global--spacer--control--vertical--compact: var(--pf-t--global--spacer--xs);
   --pf-t--global--spacer--control--horizontal--compact: var(--pf-t--global--spacer--md);
+  --pf-t--global--spacer--control--horizontal--spacious: var(--pf-t--global--spacer--lg);
 }
