--- a/src/patternfly/components/TextInputGroup/text-input-group-main.hbs
+++ b/src/patternfly/components/TextInputGroup/text-input-group-main.hbs
@@ -1,4 +1,8 @@
-<div class="{{pfv}}text-input-group__main{{#if text-input-group-main--modifier}} {{text-input-group-main--modifier}}{{/if}}"
+<div class="{{pfv}}text-input-group__main
+  {{#if text-input-group-main--IsSuccess}} pf-m-success{{/if}}
+  {{#if text-input-group-main--IsWarning}} pf-m-warning{{/if}}
+  {{#if text-input-group-main--IsError}} pf-m-error{{/if}}
+  {{#if text-input-group-main--modifier}} {{text-input-group-main--modifier}}{{/if}}"
   {{#if text-input-group-main--attribute}}
     {{{text-input-group-main--attribute}}}
   {{/if}}>
