--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -3,14 +3,22 @@
 :where(:root, .#{$text-input-group}) {
   --#{$text-input-group}--BackgroundColor: var(--pf-t--global--background--color--control--default);
   --#{$text-input-group}--BorderColor: var(--pf-t--global--border--color--default);
+  --#{$text-input-group}__main--m-success--BorderColor: var(--pf-t--global--border--color--status--success--default);
+  --#{$text-input-group}__main--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--default);
+  --#{$text-input-group}__main--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--default);
   --#{$text-input-group}--BorderWidth: var(--pf-t--global--border--width--control--default);
 
   // Border hover
   --#{$text-input-group}--m-hover--BorderColor: var(--pf-t--global--border--color--hover);
+  --#{$text-input-group}--m-hover__main--m-success--BorderColor: var(--pf-t--global--border--color--status--success--hover);
+  --#{$text-input-group}--m-hover__main--m-warning--BorderColor: var(--pf-t--global--border--color--status--warning--hover);
+  --#{$text-input-group}--m-hover__main--m-error--BorderColor: var(--pf-t--global--border--color--status--danger--hover);
+  
 
   // Main
   --#{$text-input-group}__main--first-child--not--text-input--MarginInlineStart: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__main--m-icon__text-input--PaddingInlineStart: var(--pf-t--global--spacer--xl);
+  --#{$text-input-group}__main--m-status__text-input--PaddingInlineEnd: var(--pf-t--global--spacer--xl);
   --#{$text-input-group}__main--RowGap: var(--pf-t--global--spacer--xs);
   --#{$text-input-group}__main--ColumnGap: var(--pf-t--global--spacer--xs);
 
@@ -20,6 +28,7 @@
   --#{$text-input-group}__text--BorderStartEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
   --#{$text-input-group}__text--BorderEndEndRadius: var(--#{$text-input-group}__text--BorderRadius--base);
   --#{$text-input-group}__text--BorderEndStartRadius: var(--#{$text-input-group}__text--BorderRadius--base);
+  --#{$text-input-group}__text--Position: initial;
 
   // Label group
   --#{$text-input-group}--c-label-group__main--PaddingBlockStart: var(--pf-t--global--spacer--xs);
@@ -39,7 +48,12 @@
 
   // Icon
   --#{$text-input-group}__icon--InsetInlineStart: var(--pf-t--global--spacer--sm);
+  --#{$text-input-group}__icon--InsetInlineEnd: var(--pf-t--global--spacer--sm);
   --#{$text-input-group}__icon--Color: var(--pf-t--global--icon--color--regular);
+  --#{$text-input-group}__icon--m-status--Color: var(--pf-t--global--icon--color--regular);
+  --#{$text-input-group}__main--m-success__icon--m-status--Color: var(--pf-t--global--icon--color--status--success--default);
+  --#{$text-input-group}__main--m-warning__icon--m-status--Color: var(--pf-t--global--icon--color--status--warning--default);
+  --#{$text-input-group}__main--m-error__icon--m-status--Color: var(--pf-t--global--icon--color--status--danger--default);
   --#{$text-input-group}__icon--TranslateY: -50%;
 
   // Utilities
@@ -66,6 +80,7 @@
   &.pf-m-disabled {
     --#{$text-input-group}--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}__icon--Color: var(--#{$text-input-group}--m-disabled--Color);
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}--m-disabled--Color);
     --#{$text-input-group}--BackgroundColor: var(--#{$text-input-group}--m-disabled--BackgroundColor);
 
     pointer-events: none;
@@ -74,7 +89,7 @@
   &.pf-m-plain {
     --#{$text-input-group}--BackgroundColor: transparent;
 
-    .#{$text-input-group}__text {
+    .#{$text-input-group}__main {
       &::before {
         border: 0;
       }
@@ -89,8 +104,46 @@
   gap: var(--#{$text-input-group}__main--RowGap) var(--#{$text-input-group}__main--ColumnGap);
   min-width: 0;
 
+  &::before {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    content: "";
+    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
+    border-start-start-radius: var(--#{$text-input-group}__text--BorderStartStartRadius);
+    border-start-end-radius: var(--#{$text-input-group}__text--BorderStartEndRadius);
+    border-end-start-radius: var(--#{$text-input-group}__text--BorderEndStartRadius);
+    border-end-end-radius: var(--#{$text-input-group}__text--BorderEndEndRadius);
+  }
+  
+  &:where(.pf-m-icon, .pf-m-succes, .pf-m-warning, .pf-m-error) {
+    --#{$text-input-group}__text--Position: relative;
+  }
+
   &.pf-m-icon {
     --#{$text-input-group}__text-input--PaddingInlineStart: var(--#{$text-input-group}__main--m-icon__text-input--PaddingInlineStart);
+  }
+
+  &.pf-m-success {
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-success--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-success--BorderColor);
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-success__icon--m-status--Color);  
+  }
+
+  &.pf-m-warning {
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-warning--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-warning--BorderColor);
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-warning__icon--m-status--Color);  
+  }
+
+  &.pf-m-error {
+    --#{$text-input-group}--BorderColor: var(--#{$text-input-group}__main--m-error--BorderColor);
+    --#{$text-input-group}--m-hover--BorderColor: var(--#{$text-input-group}--m-hover__main--m-error--BorderColor);
+    --#{$text-input-group}__icon--m-status--Color: var(--#{$text-input-group}__main--m-error__icon--m-status--Color);  
+  }
+
+  &:where(.pf-m-success, .pf-m-warning, .pf-m-error) {
+    --#{$text-input-group}__text-input--PaddingInlineEnd: var(--#{$text-input-group}__main--m-status__text-input--PaddingInlineEnd);
   }
 
   > :first-child:not(.#{$text-input-group}__text) {
@@ -107,30 +160,27 @@
 }
 
 .#{$text-input-group}__text {
+  position: var(--#{$text-input-group}__text--Position);
   display: inline-grid;
   flex: 1;
   grid-template-areas: "text-input";
   grid-template-columns: 1fr;
-
-  &::before {
-    position: absolute;
-    inset: 0;
-    pointer-events: none;
-    content: "";
-    border: var(--#{$text-input-group}--BorderWidth) solid var(--#{$text-input-group}--BorderColor);
-    border-start-start-radius: var(--#{$text-input-group}__text--BorderStartStartRadius);
-    border-start-end-radius: var(--#{$text-input-group}__text--BorderStartEndRadius);
-    border-end-start-radius: var(--#{$text-input-group}__text--BorderEndStartRadius);
-    border-end-end-radius: var(--#{$text-input-group}__text--BorderEndEndRadius);
-  }
 }
 
 .#{$text-input-group}__icon {
   position: absolute;
   inset-block-start: 50%;
-  inset-inline-start: var(--#{$text-input-group}__icon--InsetInlineStart);
-  color: var(--#{$text-input-group}__icon--Color);
   transform: translateY(var(--#{$text-input-group}__icon--TranslateY));
+  
+  &:not(.pf-m-status) {
+    inset-inline-start: var(--#{$text-input-group}__icon--InsetInlineStart);
+    color: var(--#{$text-input-group}__icon--Color);
+  }
+    
+  &.pf-m-status {
+    inset-inline-end: var(--#{$text-input-group}__icon--InsetInlineEnd);
+    color: var(--#{$text-input-group}__icon--m-status--Color);
+  }
 }
 
 .#{$text-input-group}__text-input {
