--- a/src/patternfly/components/Alert/alert.scss
+++ b/src/patternfly/components/Alert/alert.scss
@@ -116,12 +116,13 @@
   padding-block-end: var(--#{$alert}--PaddingBlockEnd);
   padding-inline-start: var(--#{$alert}--PaddingInlineStart);
   padding-inline-end: var(--#{$alert}--PaddingInlineEnd);
+  overflow: hidden; // required for animation slide in
   font-size: var(--#{$alert}--FontSize);
   background-color: var(--#{$alert}--BackgroundColor);
   border: var(--#{$alert}--BorderWidth) solid var(--#{$alert}--BorderColor);
   border-radius: var(--#{$alert}--BorderRadius);
   box-shadow: var(--#{$alert}--BoxShadow);
-
+  
   &.pf-m-custom {
     --#{$alert}--BorderColor: var(--#{$alert}--m-custom--BorderColor);
     --#{$alert}__icon--Color: var(--#{$alert}--m-custom__icon--Color);
