chore(button): hbs updates to button component

--- a/src/patternfly/components/Badge/badge.hbs
+++ b/src/patternfly/components/Badge/badge.hbs
@@ -1,4 +1,5 @@
 <span class="{{pfv}}badge
+  {{#if badge--IsRead}}pf-m-read {{/if}}
   {{#if badge--IsUnread}}pf-m-unread {{/if}}
   {{#if badge--IsDisabled}}pf-m-disabled {{/if}}
   {{#if badge--modifier}} {{badge--modifier}}{{/if}}"
