--- a/src/patternfly/components/Button/button-icon.hbs
+++ b/src/patternfly/components/Button/button-icon.hbs
@@ -2,9 +2,9 @@
   {{#if button-icon--attribute}}
     {{{button-icon--attribute}}}
   {{/if}}>
-  {{#if button-icon--name}}
-    <i class="{{{button-icon--name}}}" aria-hidden="true"></i>
-  {{else}}
+  {{#if button--icon}}
+    <i class="fas fa-{{button--icon}}" aria-hidden="true"></i>
+  {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
 </span>
